--- a/client/index.html
+++ b/client/index.html
@@ -110,6 +110,7 @@ var raycaster,
 let tempMatrix = new THREE.Matrix4();
 let group;
 
+// test
 let ark = [{
     positions: [new THREE.Vector3(0.7, 0.5, 0.1),
         new THREE.Vector3(-0.5, 0.4, -0.09),
