controller and more patch cables

--- a/client/index.html
+++ b/client/index.html
@@ -105,7 +105,8 @@
                 "signal": { "_props": { "kind": "outlet" } } }
             },
             "arcs": [
-                ["a.signal", "b.source"]//, [ "child.a.signal", "b" ]
+                ["a.signal", "b.source"], 
+                [ "child.aa.signal", "b.source" ]
             ]
         }
     </script>
