--- a/client/index.html
+++ b/client/index.html
@@ -40,7 +40,7 @@
     <div id="container"></div>
     <canvas id="webgl-canvas"></canvas>
     <div id="log">log</div>
-
+    <link href="favicon.ico" rel="icon" type="image/x-icon" />
     <script src="js/gl-matrix-min.js"></script>
     <script src="js/screenfull.js"></script>
     <script src="js/utils.js"></script>
@@ -95,9 +95,10 @@
                     "source": { "_props": { "kind": "inlet" } }
                 },
                 "lfo1": {
-                    "_props": { "kind": "lfo", "pos": [0.0, 0.5, 0.0]},
-                    "signal": { "_props": { "kind": "outlet" } },
-                    "rate": {"_props": {"kind": "param", "value": 1 } }
+                    "_props": { "kind": "lfo", "pos": [0.0, 0.5, 0.0], "orient": [0, 0, 0, 1]},
+                    "signal": { "_props": { "kind": "outlet" } }
+                    //third parameter causes array error
+                    //,"rate": {"_props": {"kind": "param", "value": 1 } }
                 },
                 "child": {
                     "_props": { "kind": "group", "pos": [0.5, 1.5, 0.0], "orient": [0, 0, 0, 1] },
