--- a/client/index.html
+++ b/client/index.html
@@ -88,17 +88,19 @@
             "nodes": {
                 "a": {
                     "_props": { "kind": "noise", "pos": [0.0, 1.5, 0.0], "orient": [0, 0, 0, 1] },
-                    "signal": { "_props": { "kind": "outlet" } }
+                    "signal": { "_props": { "kind": "outlet" } },
+                    "amp": { "_props": { "kind": "large_knob" } }
                 },
                 "b": {
                     "_props": { "kind": "dac", "pos": [0.0, 1.0, 0.0], "orient": [0, 0, 0, 1] },
-                    "source": { "_props": { "kind": "inlet" } }
+                    "source": { "_props": { "kind": "inlet" } },
+                    "voip": { "_props": { "kind": "small_knob" } }
                 },
                 "lfo1": {
                     "_props": { "kind": "lfo", "pos": [0.0, 0.5, 0.0], "orient": [0, 0, 0, 1]},
                     "signal": { "_props": { "kind": "outlet" } }
                     //third parameter causes array error
-                    //,"rate": {"_props": {"kind": "param", "value": 1 } }
+                    ,"rate": {"_props": {"kind": "param", "value": 1 } }
                 },
                 "child": {
                     "_props": { "kind": "group", "pos": [0.5, 1.5, 0.0], "orient": [0, 0, 0, 1] },
