patcher default from server

--- a/client/index.html
+++ b/client/index.html
@@ -94,35 +94,8 @@
     </script>
     <script>
         let patch = {
-            "nodes": {
-                "a": {
-                    "_props": { "kind": "noise", "pos": [0.0, 1.5, 0.0], "orient": [0, 0, 0, 1] },
-                    "signal": { "_props": { "kind": "outlet" } }
-                },
-                "b": {
-                    "_props": { "kind": "dac", "pos": [0.0, 1.0, 0.0], "orient": [0, 0, 0, 1] },
-                    "source": { "_props": { "kind": "inlet" } }
-                },
-                "lfo1": {
-                    "_props": { "kind": "lfo", "pos": [0.0, 0.5, 0.0], "orient": [0, 0, 0, 1]},
-                    "signal": { "_props": { "kind": "outlet" } }
-                    //third parameter causes array error
-                    //,"rate": {"_props": {"kind": "param", "value": 1 } }
-                },
-                "child": {
-                    "_props": { "kind": "group", "pos": [0.5, 1.5, 0.0], "orient": [0, 0, 0, 1] },
-                    "aa": {
-                        "_props": { "kind": "BEEP", "pos": [0.0, 0.2, 0.0], "orient": [0, 0, 0, 1] },
-                        "signal": { "_props": { "kind": "outlet" } }
-                    }
-                },
-                "x": { "_props": { "kind": "noise", "pos": [-0.5, 1.5, 0.0], "orient": [0, 0, 0, 1] },
-                "signal": { "_props": { "kind": "outlet" } } }
-            },
-            "arcs": [
-                ["a.signal", "b.source"], 
-                [ "child.aa.signal", "b.source" ]
-            ]
+            "nodes": {},
+            "arcs": []
         }
        
     </script>
