better log output showing genome mutations

--- a/client/index.html
+++ b/client/index.html
@@ -63,6 +63,11 @@
             console.log(msg);
         }
 
+        function clearWrite(){
+            log.innerText = "";
+            
+        }
+
         let stats = new Stats();
         stats.showPanel( 0 ); // 0: fps, 1: ms, 2: mb, 3+: custom
         document.body.appendChild( stats.dom );
