--- a/client/index.html
+++ b/client/index.html
@@ -68,6 +68,7 @@
         document.body.appendChild( stats.dom );
 
     </script>
+    <script src="modules.js"></script>
     <script src="client.js"></script>
 </body>
 </html>
