Rewrote write() to not flood the scene with logs, cleaned up more stuff. Getting ready to potentially add a debug mode, so console logs only show on debug

--- a/client/index.html
+++ b/client/index.html
@@ -55,11 +55,23 @@
     <script src="js/three-r102/examples/js/vr/ViveController.js"></script>
 
     <script>
+
         let canvas = document.getElementById("webgl-canvas");
 
         let log = document.getElementById("log");
+        let msgs = [];
+
         function write(msg) {
-            log.innerText += "\n" + msg;
+
+            if(msgs.length > 15){
+                msgs.shift();
+            }
+
+            msgs.push(msg);
+            let fMsg = msgs.join("\n");
+
+            log.innerText = "";
+            log.innerText +=  "Log: \n " + fMsg;
             console.log(msg);
         }
 
