started to refactor and split up code

--- a/client/index.html
+++ b/client/index.html
@@ -81,6 +81,8 @@
 
     </script>
     <script src="modules.js"></script>
+    <script src="interactions.js"></script>
+    <script src="updates.js"></script>
     <script src="client.js"></script>
 </body>
 </html>
