Orbit controls for non VR

--- a/client/index.html
+++ b/client/index.html
@@ -42,6 +42,7 @@
     <div id="log">Log:</div>
 
     <link href="favicon.ico" rel="icon" type="image/x-icon" />
+
     <script src="js/gl-matrix-min.js"></script>
     <script src="js/screenfull.js"></script>
     <script src="js/utils.js"></script>
@@ -50,6 +51,8 @@
     <script src="js/webutils.js"></script>
     <script src="js/three-r102/build/three.js"></script>
     <script src="js/three-r102/examples/js/loaders/OBJLoader.js"></script>
+    <script src="js/three-r102/examples/js/controls/OrbitControls.js"></script>
+    <script src="js/three-r102/examples/js/WebGL.js"></script>
     <script src="js/three-r102/examples/js/vr/WebVR.js"></script>
     <script src="js/three-r102/examples/js/libs/stats.min.js"></script>
     <script src="js/three-r102/examples/js/vr/ViveController.js"></script>
