Fancy font, glsl shaders for cylinder and boxes randomly

--- a/client/index.html
+++ b/client/index.html
@@ -83,6 +83,8 @@
         document.body.appendChild( stats.dom );
 
     </script>
+
+    <script src="bundle.js"></script>
     <script src="modules.js"></script>
     <script src="interactions.js"></script>
     <script src="updates.js"></script>
