--- a/client/index.html
+++ b/client/index.html
@@ -41,7 +41,7 @@
     <canvas id="webgl-canvas"></canvas>
     <div id="log">Log:</div>
 
-    <link href="favicon.ico" rel="icon" type="image/x-icon" />
+    <!--<link href="favicon.ico" rel="icon" type="image/x-icon" />-->
 
     <script src="js/gl-matrix-min.js"></script>
     <script src="js/screenfull.js"></script>
