--- a/client/index.html
+++ b/client/index.html
@@ -76,6 +76,7 @@
     <script src="js/three-r102/examples/js/vr/WebVR.js"></script>
     <script src="js/three-r102/examples/js/libs/stats.min.js"></script>
     <script src="js/three-r102/examples/js/vr/ViveController.js"></script>
+    <script src="bundle.js"></script>
 
     <script>
 
