Feature Fix: Fixed cable deletion and HUD

--- a/client/index.html
+++ b/client/index.html
@@ -99,6 +99,8 @@
         function log(...args) {
             console.log(args);
             logonly(args)
+            // TODO if debug
+            logVR(args)
         }
 
       
