New Feature Add: Added Knob indicators and pushed cable jacks out so its easier to grab

--- a/client/index.html
+++ b/client/index.html
@@ -100,7 +100,7 @@
             console.log(args);
             logonly(args)
             // TODO if debug
-            logVR(args)
+            //logVR(args)
         }
 
       
