--- a/client/index.html
+++ b/client/index.html
@@ -76,7 +76,7 @@
     <script src="js/three-r102/examples/js/vr/WebVR.js"></script>
     <script src="js/three-r102/examples/js/libs/stats.min.js"></script>
     <script src="js/three-r102/examples/js/vr/ViveController.js"></script>
-
+    <script src="js/xstate.js"></script>
     <script>
 
         let canvas = document.getElementById("webgl-canvas");
@@ -114,6 +114,7 @@
     <script src="bundle.js"></script>
     <script src="modules.js"></script>
     <script src="client2.js"></script>
+    <script src="stateMachine.js"></script>
     <!--
     <script src="interactions.js"></script>
     <script src="updates.js"></script>
