refactored client files and added missing properties to the delnode still assertion error however

--- a/client/index.html
+++ b/client/index.html
@@ -113,7 +113,7 @@
 
     <script src="bundle.js"></script>
     <script src="modules.js"></script>
-    <script src="client2.js"></script>
+    <script src="webGlClient.js"></script>
     <!--
     <script src="interactions.js"></script>
     <script src="updates.js"></script>
