Added local graph to the webGlClient

--- a/client/index.html
+++ b/client/index.html
@@ -111,6 +111,8 @@
 
     </script>
 
+    <script src="got.js"></script>
+
     <script src="bundle.js"></script>
     <script src="modules.js"></script>
     <script src="webGlClient.js"></script>
