Got GOT's working in client and figured out how to add dependencies to the client with browserify!

--- a/client/index.html
+++ b/client/index.html
@@ -111,11 +111,10 @@
 
     </script>
 
-    <script src="got.js"></script>
-
-    <script src="bundle.js"></script>
+    <script src="bundled_dependencies.js"></script>
     <script src="modules.js"></script>
     <script src="webGlClient.js"></script>
+
     <!--
     <script src="interactions.js"></script>
     <script src="updates.js"></script>
