--- a/client/index.html
+++ b/client/index.html
@@ -112,7 +112,7 @@
     </script>
 
     <script src="bundled_dependencies.js"></script>
-    <script src="modules.js"></script>
+    <script type="module" src="modules.js"></script>
     <script src="webGlClient.js"></script>
 
     <!--
