--- a/index.html
+++ b/index.html
@@ -1,124 +1,8 @@
-<!doctype html>
-<head>
-<!-- Basic Page Needs -->
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<!-- <link rel="icon" type="image/png" href="images/favicon.png"> -->
+<script id="md" type="text/markdown" style="visibility:hidden;">
 
-<title>NIME 2020 Workshop Proposal</title>
-<meta name="description" content="Alice Lab for Computational Worldmaking">
-<meta name="author" content="Graham Wakefield">
+## Abstract
 
-<!-- FONT -->
-<link href="http://fonts.googleapis.com/css?family=Roboto:100,400,700&subset=cyrillic-ext,greek-ext,latin-ext" rel="stylesheet">
+This article focuses on the rich potential of hybrid domain translation of modular synthesis (MS) into virtual reality (VR). It asks: to what extent can what is valued in studio-based MS practice find a natural home or rich new interpretations in the immersive capacities of VR? The article attends particularly to the relative affordances and constraints of each as they inform the design and development of a new system *Mischmasch* supporting collaborative and performative patching of Max gen~ patches and operators within a shared room-scale VR space. 
 
-<!-- <link rel="stylesheet" href="css/robotolight.css" type="text/css" /> -->
-
-<!-- CSS -->
-<link rel="stylesheet" href="css/normalize.css">
-<link rel="stylesheet" href="css/skeleton.css">
-
-<style>
-
-#top {
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 3em;
-	
-	background-color: #444;
-	color: #fff;
-	
-	display: flex;
-	align-items: center;
-}
-
-header {
-	width:90%; max-width: 960px;	/* page width */
-	margin: 0 auto 0 auto;
-	
-	color: #fff;
-	font-family: 'robotothin', 'Helvetica Neue Light', Helvetica, Arial, sans-serif;
-	font-size: 1em;
-}
-
-header b {
-	color: #fff;
-	font-size: 1.618em;
-}
-
-main {
-	width:90%; max-width: 960px;	/* page width */
-	margin: 4em auto 4em auto;
-	/*margin-top: 2em;
-	margin-bottom: 30px;*/
-	/*background-color: #ccc;*/
-}
-
-#bottom {
-	position: fixed;
-	bottom: 0;
-	left: 0;
-	width: 100%;
-	height: 4em;
-	font-size: 0.8em;
-	
-	display: flex;
-	align-items: center;
-	
-	background-color: #444;
-	color: #bbb;
-	
-}
-
-footer {
-	width:90%; max-width: 960px;	/* page width */
-	margin: 0 auto 0 auto;
-	
-}
-
-footer a { 
-	color: inherit; 
-} 
-
-img {
-	max-width: 100%;
-}
-
-.pull-left {
-	float: left;
-	width: 25%;
-	margin-right: 1em;
-}
-.pull-right {
-	float: right;
-	width: 40%;
-	margin-left: 1em;
-}
-
-</style>
-
-</head>
-<body>
-
-
-<main>
-
-<section>
-<p>NIME 2020 Workshop Proposal</p>
-<h1 id="collaborative-modular-patching-in-virtual-reality">Collaborative Modular Patching in Virtual Reality</h1>
-<p> In this workshop, participants will explore and learn how to use a new collaborative patching interface in virtual reality (VR) that is directly inspired by technologies and practices of modular synthesis (MS). In this “MSVR” interface, multiple performers patch together, interactively constructing and modifying modules while immersed in a shared VR workspace. Every edit to the patch is broadcast to all immersed players, and these changes are replicated by metaprogramming a gen~ patcher to synthesize audio. </p>
-<p>For this workshop, the instructors will give a short presentation to set the scene of MS and VR, give a short demonstration and overview of the implementation of MSVR, and then invite attendees to jam and develop together. Participants may spend some of the time immersed in VR, and other parts of the workshop exploring module design for inclusion in the space, and exploring discussion points regarding the development of modular-inspired immersive instruments and practices. Some time will be reserved at the end of the workshop for performance. Participants will leave with the knowledge required to continue development on their own. </p>
-<p>The workshop will require access to VR-ready computers and desktop-based VR headsets (HTC Vive preferred), with a recent version of Firefox and Max 8 installed. The instructors also request access to a projector and loudspeakers for presentation, and to share the VR perspective among other participants.  </p>
-<iframe width="1280" height="364" src="https://player.vimeo.com/video/388589046" frameborder="0" allow="accelerometer; autoplay; fullscreen; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</section>
-<!--
-<aside>
-
-</aside>
--->
-</main>
-
-
-</body>
+</script>
+<div id="html"></div>
