--- a/index.html
+++ b/index.html
@@ -1,4 +1,18 @@
 <script id="md" type="text/markdown" style="visibility:hidden;">
+marked.setOptions({
+  renderer: new marked.Renderer(),
+  gfm: true,
+  tables: true,
+  breaks: false,
+  pedantic: false,
+  sanitize: false,
+  smartLists: true,
+  smartypants: false
+});
+
+var md = document.getElementById("md").textContent;
+var html = marked(md);
+document.getElementById("html").innerHTML = html;
 
 ## Abstract
 
@@ -6,3 +20,5 @@ This article focuses on the rich potential of hybrid domain translation of modul
 
 </script>
 <div id="html"></div>
+
+
