--- a/index.html
+++ b/index.html
@@ -2,14 +2,17 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Minimal markdown -&gt; html example</title>
+  <title>Affordances and Constrains of Modular Synthesis in Virtual Reality</title>
   
 
 </head>
 <body>
 <!-- partial:index.partial.html -->
 <script id="md" type="text/markdown" style="visibility:hidden;">
-# Mischmasch
+# Affordances and Constrains of Modular Synthesis in Virtual Reality
+
+##  Authors
+Graham Wakefield, Michael Palumbo, Alexander Zonta
 
 ## Abstract
 This article focuses on the rich potential of hybrid domain translation of modular synthesis (MS) into virtual reality (VR). It asks: to what extent can what is valued in studio-based MS practice find a natural home or rich new interpretations in the immersive capacities of VR? The article attends particularly to the relative affordances and constraints of each as they inform the design and development of a new system *Mischmasch* supporting collaborative and performative patching of Max gen~ patches and operators within a shared room-scale VR space. 
