--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ Like hardware MS, room-scale VR is rich with spatial affordances that are highly
 
 
 <div class="section">
-<iframe  width="100%" height="100%" src="https://player.vimeo.com/video/388589046" frameborder="0" allow="accelerometer; autoplay; fullscreen; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe  width="100%" height="480" src="https://player.vimeo.com/video/388589046" frameborder="0" allow="accelerometer; autoplay; fullscreen; encrypted-media; gyroscope; picture-in-picture" allowfullscreen webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 </div>
 
 #### Embodied Interaction 
@@ -245,7 +245,7 @@ Figure 2: Three simultaneous images of Mischmasch: (left) a musician's view in V
 <p>Such liberations, however, come with loss of embodiment in their interfaces, bottlenecking human-machine interaction into narrower and flatter fields of view and frames of play. Indeed the persistence and resurgence of hardware MS is sometimes articulated as an intentional response directly away from the <em>disembodiment</em> of desktops and laptops [<a href="#ref8">8</a>].</p>
 <p>Like hardware MS, room-scale VR is rich with spatial affordances that are highly sensitive to timing, and a far greater potential for <em>embodied</em> cognition than desktop screen spaces. Indeed motion-tracked room-scale VR has demonstrated potential [<a href="#ref1">1</a>, <a href="#ref15">15</a>] to unite the dynamic flexibility of software-based MS/VPLs with the immersive and embodied situatedness of the MS studio, which we further explore through Mischmasch.  </p>
 <div class="section">
-<iframe width="100%" height="100%" src="https://player.vimeo.com/video/388589046" frameborder="0" allow="accelerometer; autoplay; fullscreen; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+<iframe width="100%" height="480" src="https://player.vimeo.com/video/388589046" frameborder="0" allow="accelerometer; autoplay; fullscreen; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" webkitallowfullscreen="" mozallowfullscreen=""></iframe>
 </div>
 
 <h4 id="embodied-interaction">Embodied Interaction</h4>
