--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ Supported by and following ethical guidelines of national government grants incl
 
 #### References
 
-1. <span id="ref1" /> N. Andersson, C. Erkut, and S. Seran. Immersive audio programming in a virtual reality sandbox. In *Proceedings of the AES International Conference on Immersive and Interactive Audio*, 2019.
+1. <span id="ref1" /> N. Andersson, C. Erkut, and S. Serafin. Immersive audio programming in a virtual reality sandbox. In *Proceedings of the AES International Conference on Immersive and Interactive Audio*, 2019.
 1. <span id="ref2" /> A. Belt. VCV Rack. [vcvrack.com](https://vcvrack.com), 2017. Accessed: 2019-04-05.
 1. <span id="ref3" /> R. B. Dannenberg. Abstract time warping of compound events and signals. *Computer Music Journal*, 21(3):61-70, 1997.
 1. <span id="ref4" /> M. Davidson. BEAP. [github.com/stretta/BEAP](https://github.com/stretta/BEAP), Dec. 2012. Accessed: 2020-01-31.
@@ -206,14 +206,14 @@ Supported by and following ethical guidelines of national government grants incl
 1. <span id="ref13" /> T. Magnusson. Designing constraints: Composing and performing with digital musical systems. *Computer Music Journal*, 34(4):62-73, 2010.
 1. <span id="ref14" /> A. McLean and G. Wiggins. Tidal-pattern language for the live coding of music. In *Proceedings of Sound and Music Computing*, 2010.
 1. <span id="ref15" /> L. Olson. SoundStage VR. [github.com/googlearchive/soundstagevr](https://github.com/googlearchive/soundstagevr), 2018. Accessed: 2020-04-05.
-1. <span id="ref16" /> M. Palumbo, A. Zonta, and G. Wakefield. Modular reality: Analogues of patching in immersive space. *Journal of New Music Research*, pages 1-16, 2020.
+1. <span id="ref16" /> M. Palumbo, A. Zonta, and G. Wakefield. Modular reality: Analogues of patching in immersive space. *Journal of New Music Research*, pages 1-16, 2020.
 1. <span id="ref17" /> R. Parmar. Creating an autopoietic improvisation environment using modular synthesis. *eContact!*,
 17(4), February 2016.
 1. <span id="ref18" /> M. Puckette. Max at seventeen. *Computer Music Journal*, 26(4):31-43, 2002.
 1. <span id="ref19" /> C. Sun and D. Chen. Consistency maintenance in real-time collaborative graphics editing systems. *ACM Trans. Comput.-Hum. Interact.*, 9(1):1-41, 2002.
 1. <span id="ref20" /> G. T. Toussaint et al. The euclidean algorithm generates traditional musical rhythms. In *Proceedings of BRIDGES: Mathematical Connections in Art, Music and Science*, pages 47-56, 2005.
 1. <span id="ref21" /> V. Vukicevic, B. Jones, K. Gilbert, and C. V. Wiemeersch. WebVR. [immersiveweb.dev](http://immersiveweb.dev), 2017. Accessed: 2019-04-01.
-1. <span  id="ref22" /> G. Wakefield. *Real-time meta-programming for interactive computational arts.* PhD thesis, University of California at Santa Barbara, 2012.
+1. <span  id="ref22" /> G. Wakefield. *Real-time meta-programming for interactive computational arts.* PhD thesis, University of California at Santa Barbara, 2012.
 
 
 Licensed under a Creative Commons Attribution 4.0 International License (CC BY 4.0). Copyright
@@ -280,7 +280,7 @@ Figure 2: Three simultaneous images of Mischmasch: (left) a musician's view in V
 </ol>
 <h4 id="references">References</h4>
 <ol>
-<li><span id="ref1"> N. Andersson, C. Erkut, and S. Seran. Immersive audio programming in a virtual reality sandbox. In <em>Proceedings of the AES International Conference on Immersive and Interactive Audio</em>, 2019.</span></li>
+<li><span id="ref1"> N. Andersson, C. Erkut, and S. Serafin. Immersive audio programming in a virtual reality sandbox. In <em>Proceedings of the AES International Conference on Immersive and Interactive Audio</em>, 2019.</span></li>
 <li><span id="ref2"> A. Belt. VCV Rack. <a href="https://vcvrack.com">vcvrack.com</a>, 2017. Accessed: 2019-04-05.</span></li>
 <li><span id="ref3"> R. B. Dannenberg. Abstract time warping of compound events and signals. <em>Computer Music Journal</em>, 21(3):61-70, 1997.</span></li>
 <li><span id="ref4"> M. Davidson. BEAP. <a href="https://github.com/stretta/BEAP">github.com/stretta/BEAP</a>, Dec. 2012. Accessed: 2020-01-31.</span></li>
@@ -295,14 +295,14 @@ Figure 2: Three simultaneous images of Mischmasch: (left) a musician's view in V
 <li><span id="ref13"> T. Magnusson. Designing constraints: Composing and performing with digital musical systems. <em>Computer Music Journal</em>, 34(4):62-73, 2010.</span></li>
 <li><span id="ref14"> A. McLean and G. Wiggins. Tidal-pattern language for the live coding of music. In <em>Proceedings of Sound and Music Computing</em>, 2010.</span></li>
 <li><span id="ref15"> L. Olson. SoundStage VR. <a href="https://github.com/googlearchive/soundstagevr">github.com/googlearchive/soundstagevr</a>, 2018. Accessed: 2020-04-05.</span></li>
-<li><span id="ref16"> M. Palumbo, A. Zonta, and G. Wakefield. Modular reality: Analogues of patching in immersive space. <em>Journal of New Music Research</em>, pages 1-16, 2020.</span></li>
+<li><span id="ref16"> M. Palumbo, A. Zonta, and G. Wakefield. Modular reality: Analogues of patching in immersive space. <em>Journal of New Music Research</em>, pages 1-16, 2020.</span></li>
 <li><span id="ref17"> R. Parmar. Creating an autopoietic improvisation environment using modular synthesis. <em>eContact!</em>,
 17(4), February 2016.</span></li>
 <li><span id="ref18"> M. Puckette. Max at seventeen. <em>Computer Music Journal</em>, 26(4):31-43, 2002.</span></li>
 <li><span id="ref19"> C. Sun and D. Chen. Consistency maintenance in real-time collaborative graphics editing systems. <em>ACM Trans. Comput.-Hum. Interact.</em>, 9(1):1-41, 2002.</span></li>
 <li><span id="ref20"> G. T. Toussaint et al. The euclidean algorithm generates traditional musical rhythms. In <em>Proceedings of BRIDGES: Mathematical Connections in Art, Music and Science</em>, pages 47-56, 2005.</span></li>
 <li><span id="ref21"> V. Vukicevic, B. Jones, K. Gilbert, and C. V. Wiemeersch. WebVR. <a href="http://immersiveweb.dev">immersiveweb.dev</a>, 2017. Accessed: 2019-04-01.</span></li>
-<li><span id="ref22"> G. Wakefield. <em>Real-time meta-programming for interactive computational arts.</em> PhD thesis, University of California at Santa Barbara, 2012.</span></li>
+<li><span id="ref22"> G. Wakefield. <em>Real-time meta-programming for interactive computational arts.</em> PhD thesis, University of California at Santa Barbara, 2012.</span></li>
 </ol>
 <p>Licensed under a Creative Commons Attribution 4.0 International License (CC BY 4.0). Copyright
 remains with the author(s).
