--- a/index.html
+++ b/index.html
@@ -11,11 +11,23 @@
   
 <style>
 
-.imgbox {
-  display: grid;
-  height: 100%;
+figure {
+  min-width: -webkit-min-content;
+  min-width: -moz-min-content;
+  min-width: min-content;
+  margin:auto;
+  text-align: center;
   padding-bottom: 1em;
 }
+
+figure img {
+  
+}
+
+figcaption {
+  
+}
+
 .center-fit {
   max-width: 80%;
   max-height: 100vh;
