--- a/index.html
+++ b/index.html
@@ -249,6 +249,8 @@ remains with the author(s).
 NIME’20, July 21-25, 2020, Royal Birmingham Conservatoire,
 Birmingham City University, Birmingham, United Kingdom.
 
+<img src="images/logo512.png" />
+
 </script>
 <!-- ------------ -------------------------------------------------------------------------- -->
 <div class="mainArticle" id="thediv"><h2 id="affordances-and-constraints-of-modular-synthesis-in-virtual-reality">Affordances and Constraints of Modular Synthesis in Virtual Reality</h2>
@@ -348,4 +350,6 @@ Birmingham City University, Birmingham, United Kingdom.
 remains with the author(s).
 NIME’20, July 21-25, 2020, Royal Birmingham Conservatoire,
 Birmingham City University, Birmingham, United Kingdom.</p>
+<img src="images/logo512.png">
+
 </div></body></html>
