updates to the appjs for interapp websockets

--- a/client/index.html
+++ b/client/index.html
@@ -114,6 +114,7 @@
     <script src="bundled_dependencies.js"></script>
     <script src="modules.js"></script>
     <script src="webGlClient.js"></script>
+    <!-- <script type="module" src="webGlClient.js"></script> -->
 
     <!--
     <script src="interactions.js"></script>
