--- a/public/room.html
+++ b/public/room.html
@@ -5,11 +5,18 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Mischmasch</title>
-        <script type="module">
+        <!-- <script type="module">
             import { VRButton } from './js/VRButton.js';
-        </script>
+        </script> -->
+        
     </head>
     <body>
-        <script src="./js/script.js"></script>
+        <script type="module" src="./js/script.js"></script>
+        <script>
+
+        </script>
+        
+
+
     </body>
 </html>
