--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Mischmasch</title>
+<html>
 
-    </head>
-    <body>
-        <script type="module" src="./js/script.js"></script>
-        <script>
+<head>
+  <title>Discoverthreejs.com - Introducing the World App</title>
 
-        </script>
-        
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
 
+  <link rel="icon" href="https://discoverthreejs.com/favicon.ico" type="image/x-icon">
 
-    </body>
+  <link href="./styles/main.css" rel="stylesheet" type="text/css">
+
+  <script type="module" src="./src/main.js"></script>
+</head>
+
+<body>
+  <h1>Discoverthreejs.com - Introducing the World App</h1>
+  <div id="scene-container">
+    <!-- Our <canvas> will be inserted here -->
+  </div>
+</body>
+
 </html>
