--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,14 @@
   <link rel="icon" href="https://discoverthreejs.com/favicon.ico" type="image/x-icon">
 
   <link href="./styles/main.css" rel="stylesheet" type="text/css">
+  <script type="importmap">
+    {
+        "imports": {
+            "three": "https://unpkg.com/three@0.138.0/build/three.module.js",
+            "OrbitControls": "https://unpkg.com/three@0.138.0/examples/jsm/controls/OrbitControls.js"
+        }
+    }
+</script>
 
   <script type="module" src="./src/main.js"></script>
 </head>
