--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
 
 <body>
   <h1>Discoverthreejs.com - Introducing the World App</h1>
+  <button id="addNode">Add Node</button>
   <div id="scene-container">
     <!-- Our <canvas> will be inserted here -->
   </div>
