need to pivot to using npm and a bundler, or the import map is gonna be super frustrating long term

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,11 @@
     {
         "imports": {
             "three": "https://unpkg.com/three@0.138.0/build/three.module.js",
-            "OrbitControls": "https://unpkg.com/three@0.138.0/examples/jsm/controls/OrbitControls.js"
+            "OrbitControls": "https://unpkg.com/three@0.138.0/examples/jsm/controls/OrbitControls.js",
+            "FontLoader": "https://unpkg.com/three@0.125.0/src/loaders/FontLoader.js",
+            "troika-three-text": "https://cdn.jsdelivr.net/npm/troika-three-text@0.46.4/dist/troika-three-text.esm.js",
+            "troika-three-utils": "http://unpkg.com/troika-three-utils@latest/dist/troika-three-utils.esm.js",
+            "troika-worker-utils": "http://unpkg.com/troika-worker-utils@latest/dist/troika-worker-utils.esm.js"  
         }
     }
 </script>
