--- a/webxr/index.html
+++ b/webxr/index.html
@@ -8,9 +8,22 @@
       /* remove extra spacing around elements so we can fill the available page */
       * { margin: 0; } 
       </style>
+
   </head>
   <body>
     <div id="app"></div>
+    <!-- <script type="importmap">
+      {
+          "imports": {
+              
+              "troika-three-text": "https://unpkg.com/troika-three-text@latest/dist/troika-three-text.esm.js",
+              "troika-three-utils": "https://unpkg.com/troika-three-utils@latest/dist/troika-three-utils.esm.js",
+              "troika-worker-utils": "https://unpkg.com/troika-worker-utils@latest/dist/troika-worker-utils.esm.js",
+              "webgl-sdf-generator": "https://unpkg.com/webgl-sdf-generator@latest/dist/webgl-sdf-generator.mjs",
+              "bidi-js":             "https://unpkg.com/bidi-js@latest/dist/bidi.mjs"
+          }
+      }
+  </script> -->
     <script type="module" src="/main.js"></script>
   </body>
 </html>
