working on genish audio see #227 and #228

--- a/webxr/index.html
+++ b/webxr/index.html
@@ -24,6 +24,8 @@
           }
       }
   </script> -->
+    <script src="components/Audio/subworkers.js"></script>
+    <script src='components/Audio/genish.js'></script>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
